--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,18 @@ version: '3.8'
 
 services:
   db:
+    container_name: db
     image: postgres:13
     restart: always
     env_file:
       - .env
-    environment:
-      SOME_SECRET: some_value
     ports:
-      - 5432:5432
+      - ${DB_PORT}:${DB_PORT}
     volumes:
       - db_data:/var/lib/postgresql/data
-
+      
   node-app:
+    container_name: node_app
     restart: always
     build:
       context: .
@@ -22,13 +22,11 @@ services:
       - db
     env_file:
       - .env
-    environment:
-      SOME_SECRET: some_value
     ports:
-      - 3000:3000
+      - ${PORT}:${PORT}
     volumes:
       - .:/usr/app
-      - /usr/app/node_modules # no sobre escribirá esta ruta en especifico
+      - /usr/app/node_modules
 
 volumes:
   db_data: {}
