--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,14 @@
 node_modules/
 dist/
 coverage/
+*.test*
+*.spec*
+*test*/
+.nvmrc
 .vscode/
 .git/
 Dockerfile*
-docker-compose.yml
+docker-compose*.yml
 *.eslint*
 *.prettier*
 *.md
@@ -14,3 +18,5 @@ docker-compose.yml
 .dockerignore
 .gitignore
 .DS_Store
+
+
