--- a/tsconfig.json
+++ b/tsconfig.json
@@ -95,12 +95,12 @@
   },
   "exclude": [
     "node_modules",
+    "./dist/**/**/*",
     "**/*.test.ts",
     "**/*.spec.ts"
   ],
   "include": [
     "src/**/*.ts",
-    "src/config/a"
   ],
   "compileOnSave": true,
 }
