--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
 	"description": "",
 	"main": "src/index.ts",
 	"scripts": {
-		"prettier-fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
+		"prettier:fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
 		"lint": "npm run prettier:fmt && eslint . --ext .ts --fix --color",
 		"build": "rm -rf dist/ && tsc -b",
-		"dev": "npm run lint && nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
+		"dev:nodemon": "npm run lint && nodemon -L --watch './**/*.ts' --exec 'ts-node' src/index.ts",
+		"dev:ts-node-dev": "npm run lint && ts-node-dev src/index.ts",
 		"start": "NODE_ENV=production node dist/index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest --verbose",
+		"test:coverage": "jest --coverage",
+		"test:watch": "jest --watchAll"
 	},
 	"keywords": [],
 	"author": "Juan Sebastián Agudelo @juansacdev <juansac.me@gmail.com>",
@@ -24,6 +27,14 @@
 		"nodemon": "2.0.16",
 		"prettier": "2.6.2",
 		"ts-node": "10.7.0",
+		"ts-node-dev": "2.0.0",
+		"jest": "28.1.0",
+		"ts-jest": "28.0.3",
+		"@types/jest": "27.5.1",
 		"typescript": "4.6.4"
+	},
+	"jest": {
+		"preset": "ts-jest",
+		"testEnvironment": "node"
 	}
 }
