--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
 	"description": "",
 	"main": "src/index.ts",
 	"scripts": {
-		"prettier:fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
-		"lint": "npm run prettier:fmt && eslint . --ext .ts --fix --color",
+		"lint": "ts-standard",
 		"build": "rm -rf dist/ && tsc -b",
-		"dev:nodemon": "npm run lint && nodemon -L --watch './**/*.ts' --exec 'ts-node' src/index.ts",
-		"dev:ts-node-dev": "npm run lint && ts-node-dev src/index.ts",
+		"dev": "ts-node-dev src/index.ts",
 		"start": "NODE_ENV=production node dist/index.js",
 		"test": "jest --verbose",
 		"test:coverage": "jest --coverage",
@@ -18,23 +16,43 @@
 	"author": "Juan Sebastián Agudelo @juansacdev <juansac.me@gmail.com>",
 	"license": "MIT",
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "5.22.0",
-		"@typescript-eslint/parser": "5.22.0",
-		"eslint": "8.15.0",
-		"eslint-config-prettier": "8.5.0",
-		"eslint-plugin-import": "2.26.0",
-		"eslint-plugin-prettier": "4.0.0",
-		"nodemon": "2.0.16",
-		"prettier": "2.6.2",
-		"ts-node": "10.7.0",
-		"ts-node-dev": "2.0.0",
-		"jest": "28.1.0",
-		"ts-jest": "28.0.3",
+		"@types/cors": "2.8.12",
+		"@types/express": "4.17.13",
 		"@types/jest": "27.5.1",
-		"typescript": "4.6.4"
+		"@types/morgan": "1.9.3",
+		"@types/swagger-ui-express": "4.1.3",
+		"@types/yamljs": "0.2.31",
+		"jest": "28.1.0",
+		"prettier": "2.6.2",
+		"ts-jest": "28.0.3",
+		"ts-node-dev": "2.0.0",
+		"ts-standard": "11.0.0",
+		"typescript": "4.7.2"
 	},
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node"
+	},
+	"eslintConfig": {
+		"parserOptions": {
+			"project": "./tsconfig.json"
+		},
+		"extends": [
+			"./node_modules/ts-standard/eslintrc.json"
+		]
+	},
+	"ts-standard": {
+		"project": "./tsconfig.json"
+	},
+	"dependencies": {
+		"@hapi/boom": "10.0.0",
+		"cors": "2.8.5",
+		"dotenv": "16.0.1",
+		"express": "4.18.1",
+		"helmet": "5.1.0",
+		"morgan": "1.10.0",
+		"swagger-ui-express": "4.4.0",
+		"winston": "3.7.2",
+		"yamljs": "0.3.0"
 	}
 }
